--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>funmi</title>
+    <title>Funmi - CSS Color Conversion App</title>
 </head>
 <body>
 <div id="app"></div>
